--- a/src/Components/LoadingPage/style.css
+++ b/src/Components/LoadingPage/style.css
@@ -49,6 +49,13 @@
         padding: 10rem 2rem;
         /* justify-content: space-between; */
     }
+
+    .word{
+        gap: 0.6rem;
+       
+    }
+
+
     .content{
         display: grid;
         place-items: center;
